frontend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cuenly-frontend
  labels:
    name: cuenly-frontend
